wrote the method.

--- a/docs/vitaskär/02.01_method.ipynb
+++ b/docs/vitaskär/02.01_method.ipynb
@@ -96,7 +96,132 @@
    "outputs": [],
    "source": [
     "%reload_kedro\n",
-    "df = catalog.load('vitaskar.preprocessed_data').iloc[-2200:-1900]"
+    "ship='vitaskar'\n",
+    "shipname = 'Vitaskär'\n",
+    "df = catalog.load(f'{ship}.preprocessed_data')\n",
+    "harbours = catalog.load(f'params:{ship}.harbours')\n",
+    "min_time = catalog.load(f'params:{ship}.min_time')\n",
+    "min_start_speed = catalog.load(f'params:{ship}.min_start_speed')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e492998e-daf5-4e7c-9f59-3050cedebbcd",
+   "metadata": {
+    "tags": [
+     "remove_cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "glue('harbour1', list(harbours.keys())[0])\n",
+    "glue('harbour2', list(harbours.keys())[1])\n",
+    "glue('min_time', min_time)\n",
+    "glue('min_start_speed', min_start_speed)\n",
+    "glue('shipname', shipname)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f221ded-2260-42c5-a8cd-61bee4137cd2",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Trips\n",
+    "The data is divided into trips from {glue:text}`harbour1` to {glue:text}`harbour2` or the reversed direction. The speed over ground (sog) signal is used to define the start an end of the trips. Start and ends are defined by upcrossings and downcrossing of $sog$ compared to a minumum speed $sog_{min}$. This simple algorithm will however also identify false starts of trips since {glue:text}`shipname` starts each trip by reversing from the pier and then turn to ahead as seen in {numref}`fig:false_start`.\n",
+    "\n",
+    "\n",
+    "```{glue:figure} fig:false_start\n",
+    ":name: \"fig:false_start\"\n",
+    "\n",
+    "The initial reversing may identify false starts.\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70cf79b2-16ca-4daf-93c2-7aeaaa7f4993",
+   "metadata": {
+    "tags": [
+     "remove_cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# Find possible starts of trips:\n",
+    "sog = df[\"sog\"]\n",
+    "mask_start = (sog < min_start_speed) & (np.roll(sog, -1) >= min_start_speed)\n",
+    "df.loc[mask_start, \"state\"] = \"start\"\n",
+    "\n",
+    "# Remove false starts:\n",
+    "mask = df[\"state\"].isin([\"start\"])\n",
+    "df[\"time\"] = df.index\n",
+    "events = df.loc[mask]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90e14610-fd3d-4e31-8b2b-c35682b9ed24",
+   "metadata": {
+    "tags": [
+     "remove_cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "mask = events[\"time\"].diff() < f'{min_time}S'\n",
+    "df.loc[events.loc[mask].index,'state'] = 'false start'\n",
+    "false_start = events.loc[mask].iloc[0]\n",
+    "t0 = false_start.name - pd.Timedelta(100,unit='s')\n",
+    "t1 = false_start.name + pd.Timedelta(300,unit='s')\n",
+    "\n",
+    "df_ = df.loc[t0:t1]\n",
+    "\n",
+    "with plt.style.context('paper'):\n",
+    "    fig,ax=plt.subplots()\n",
+    "    df_.plot(y='sog', label=r'$sog$', ax=ax)\n",
+    "    mask = (df_['state'] == 'start')\n",
+    "    df_.loc[mask].plot(y='sog', label=r'$t_{start}$', style='sg', ax=ax)\n",
+    "    mask = (df_['state'] == 'false start')\n",
+    "    df_.loc[mask].plot(y='sog', label=r'False $t_{start}$', style='sk', ax=ax)\n",
+    "    ax.set_ylabel('Ship speed over ground $sog$ [m/s]')\n",
+    "    ax.legend();\n",
+    "    glue('fig:false_start', fig, display=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e384a5b-4e3e-4fe8-9827-3c6da7f0ac63",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "A minimum trip time $t_{min}$ is introduced to exclude these false starts giving the following algorithm:\n",
+    "\n",
+    "```{prf:algorithm} Trips\n",
+    ":label: algorithm\n",
+    "\n",
+    "**Inputs** $sog$, $sog_{min}$, $t_{min}$\n",
+    "\n",
+    "**Output** $t_{start}$, $t_{end}$\n",
+    "\n",
+    "1. Identify possible trip starts: $t_{start}$: $(sog_i < sog_{min}) \\wedge (sog_{i+i} >= sog_{min})$\n",
+    "2. Keep only valid trip starts: $t_{start,n+1} - t_{start,n} > t_{min}$\n",
+    "3. Identify trip ends: $t_{end}$: $(sog_{i-1} >= sog_{min}) \\wedge (sog_{i} < sog_{min}) \\wedge ((t_i - t_{i-1}) > t_{min} $\n",
+    "\n",
+    "```\n",
+    "where $sog_{min}$={glue:}`min_start_speed` m/s and $t_{min}$={glue:}`min_time` s. The algorithm now disregards the initial reversing as seen in {numref}`fig:divide_trips`.  \n",
+    "\n",
+    "```{glue:figure} fig:divide_trips\n",
+    ":name: \"fig:divide_trips\"\n",
+    "\n",
+    "The data is divided into trips based on the speed over ground (sog) signal.\n",
+    "```"
    ]
   },
   {
@@ -105,23 +230,30 @@
    "id": "0ac46156-b560-45e4-bd0a-69582a86577a",
    "metadata": {
     "tags": [
-     "remove_input"
+     "remove_input",
+     "remove_cell"
     ]
    },
    "outputs": [],
    "source": [
-    "fig,ax=plt.subplots()\n",
-    "df.plot(y='sog', ax=ax)\n",
+    "t2 = false_start.name + pd.Timedelta(4000,unit='s')\n",
+    "\n",
+    "df_cut = df.loc[t0:t2]\n",
     "\n",
     "with plt.style.context('paper'):\n",
-    "    for state, df__ in df.groupby(by='state'):\n",
+    "    \n",
+    "    fig,ax=plt.subplots()\n",
+    "    df_cut.plot(y='sog', label=r'$sog$', ax=ax)\n",
+    "    \n",
+    "    for state, df__ in df_cut.groupby(by='state'):\n",
     "        if state == 'start':\n",
-    "            df__.plot(y='sog', style='sg', label='start', ax=ax)\n",
+    "            df__.plot(y='sog', style='sg', label=r'$t_{start}$', ax=ax)\n",
     "        elif state == 'end':\n",
-    "            df__.plot(y='sog', style='^r', label='end', ax=ax)\n",
+    "            df__.plot(y='sog', style='^r', label=r'$t_{end}$', ax=ax)\n",
     "            \n",
     "    ax.legend();\n",
-    "    ax.set_ylabel('Ship speed over ground sog [m/s]')"
+    "    ax.set_ylabel('Ship speed over ground $sog$ [m/s]')\n",
+    "    glue('fig:divide_trips', fig, display=False)"
    ]
   }
  ],
