wrote some more.

--- a/docs/vitaskär/02.01_method.ipynb
+++ b/docs/vitaskär/02.01_method.ipynb
@@ -1,14 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "a224994d-2f6b-4ba7-b8ad-62592d230400",
-   "metadata": {},
-   "source": [
-    "# Method"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b13258fd-149a-46ee-9609-83470c122fbb",
@@ -85,6 +77,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a224994d-2f6b-4ba7-b8ad-62592d230400",
+   "metadata": {},
+   "source": [
+    "# Method\n",
+    "(method)=\n",
+    "In order to investigate the energy efficiency of {glue:text}`shipname` the data is divided into trips from {glue:text}`harbour1` to {glue:text}`harbour2` or the reversed direction. The method to define the trips is further explained in [section](sec:trips)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b726fcac-76f3-4f99-a7b0-2017c5e35e70",
@@ -99,9 +101,19 @@
     "ship='vitaskar'\n",
     "shipname = 'Vitaskär'\n",
     "df = catalog.load(f'{ship}.preprocessed_data')\n",
+    "loader_raw = catalog.load(f'{ship}.raw_data')\n",
+    "df_raw = loader_raw[list(loader_raw.keys())[-1]]()\n",
+    "dt = pd.to_datetime(df_raw['Timestamp']).diff().mean()\n",
+    "trip_statistics = catalog.load(f'{ship}.trip_statistics')\n",
+    "trip_statistics_clean = catalog.load(f'{ship}.trip_statistics_clean')\n",
+    "\n",
+    "\n",
     "harbours = catalog.load(f'params:{ship}.harbours')\n",
     "min_time = catalog.load(f'params:{ship}.min_time')\n",
-    "min_start_speed = catalog.load(f'params:{ship}.min_start_speed')"
+    "max_time = catalog.load(f'params:{ship}.max_time')\n",
+    "min_distance = catalog.load(f'params:{ship}.min_distance')\n",
+    "min_start_speed = catalog.load(f'params:{ship}.min_start_speed')\n",
+    "max_time_diff = catalog.load(f\"params:{ship}.max_time_diff\")"
    ]
   },
   {
@@ -118,8 +130,12 @@
     "glue('harbour1', list(harbours.keys())[0])\n",
     "glue('harbour2', list(harbours.keys())[1])\n",
     "glue('min_time', min_time)\n",
+    "glue('max_time', max_time)\n",
+    "glue('min_distance', min_distance)\n",
     "glue('min_start_speed', min_start_speed)\n",
-    "glue('shipname', shipname)"
+    "glue('shipname', shipname)\n",
+    "glue('max_time_diff', max_time_diff)\n",
+    "glue('dt',dt)"
    ]
   },
   {
@@ -129,8 +145,9 @@
     "tags": []
    },
    "source": [
+    "(sec:trips)=\n",
     "## Trips\n",
-    "The data is divided into trips from {glue:text}`harbour1` to {glue:text}`harbour2` or the reversed direction. The speed over ground (sog) signal is used to define the start an end of the trips. Start and ends are defined by upcrossings and downcrossing of $sog$ compared to a minumum speed $sog_{min}$. This simple algorithm will however also identify false starts of trips since {glue:text}`shipname` starts each trip by reversing from the pier and then turn to ahead as seen in {numref}`fig:false_start`.\n",
+    "The speed over ground (sog) signal is used to define the start an end of the trips. Start and ends are defined by upcrossings and downcrossing of $sog$ compared to a minumum speed $sog_{min}$. This simple algorithm will however also identify false starts of trips since {glue:text}`shipname` starts each trip by reversing from the pier and then turn to ahead as seen in {numref}`fig:false_start`.\n",
     "\n",
     "\n",
     "```{glue:figure} fig:false_start\n",
@@ -254,6 +271,36 @@
     "    ax.legend();\n",
     "    ax.set_ylabel('Ship speed over ground $sog$ [m/s]')\n",
     "    glue('fig:divide_trips', fig, display=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e20ac8cf-78da-43ff-a3e9-f94e6ac7606d",
+   "metadata": {
+    "tags": [
+     "remove_cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "glue('no_trips',len(trip_statistics))\n",
+    "glue('no_trips_clean',len(trip_statistics_clean))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ab1f0ae-5cb5-4209-9b15-6f1ea6e1b9b8",
+   "metadata": {},
+   "source": [
+    "## Data cleaning\n",
+    "Some of the trips are removed, for instance if there is missing data or the trip is too long, based on the following criteria:\n",
+    "\n",
+    "* trips that contain time gaps that are larger than {glue:}`max_time_diff` s\n",
+    "* trips should have a duration between {glue:}`min_time` and {glue:}`max_time` s\n",
+    "* trips should be longer than {glue:}`min_distance` m\n",
+    "\n",
+    "From {glue:}`no_trips` initial trips {glue:}`no_trips_clean` trips fulfills the above criteria."
    ]
   }
  ],
