--- a/docs/vitaskär/03.01_results.ipynb
+++ b/docs/vitaskär/03.01_results.ipynb
@@ -5,6 +5,7 @@
    "id": "05228f74-4794-497a-89d6-37b646c4fc70",
    "metadata": {},
    "source": [
+    "(results)=\n",
     "## Results"
    ]
   },
@@ -38,10 +39,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import seaborn as sns\n",
-    "width=20\n",
-    "height=3\n",
-    "plt.rcParams[\"figure.figsize\"] = (width,height)\n",
-    "sns.set(rc={'figure.figsize':(width,height)})\n",
+    "plt.style.use('paper')\n",
     "\n",
     "#import seaborn as sns\n",
     "import os\n",
@@ -88,10 +86,379 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e652f288-de8f-4a43-b1b4-5e1fab50c507",
-   "metadata": {},
+   "id": "1b1559c0-5d57-4c98-8f2e-f683317dfac7",
+   "metadata": {
+    "tags": [
+     "remove_cell"
+    ]
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "%reload_kedro\n",
+    "ship='vitaskar'\n",
+    "shipname = 'Vitaskär'\n",
+    "df = catalog.load(f'{ship}.data_with_trip_columns')\n",
+    "df['time'] = df.index\n",
+    "loader_raw = catalog.load(f'{ship}.raw_data')\n",
+    "df_raw = loader_raw[list(loader_raw.keys())[-1]]()\n",
+    "dt = pd.to_datetime(df_raw['Timestamp']).diff().mean()\n",
+    "t_start = pd.to_datetime(df.dropna()['time']).iloc[0]\n",
+    "t_end = pd.to_datetime(df.dropna()['time']).iloc[-1]\n",
+    "\n",
+    "trip_statistics = catalog.load(f'{ship}.trip_statistics')\n",
+    "trip_statistics_clean = catalog.load(f'{ship}.trip_statistics_clean')\n",
+    "trip_statistics_clean['trip_no'] = trip_statistics_clean.index\n",
+    "trip_statistics_clean.index = pd.to_datetime(trip_statistics_clean['start_time'])\n",
+    "trip_statistics_clean.index.name = 'time'\n",
+    "\n",
+    "harbours = catalog.load(f'params:{ship}.harbours')\n",
+    "min_time = catalog.load(f'params:{ship}.min_time')\n",
+    "max_time = catalog.load(f'params:{ship}.max_time')\n",
+    "min_distance = catalog.load(f'params:{ship}.min_distance')\n",
+    "min_start_speed = catalog.load(f'params:{ship}.min_start_speed')\n",
+    "max_time_diff = catalog.load(f\"params:{ship}.max_time_diff\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "345c1b50-14aa-4548-b7ae-1680480e31c2",
+   "metadata": {
+    "tags": [
+     "remove_cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "glue('harbour1', list(harbours.keys())[0])\n",
+    "glue('harbour2', list(harbours.keys())[1])\n",
+    "glue('min_time', min_time)\n",
+    "glue('max_time', max_time)\n",
+    "glue('min_distance', min_distance)\n",
+    "glue('min_start_speed', min_start_speed)\n",
+    "glue('shipname', shipname)\n",
+    "glue('max_time_diff', max_time_diff)\n",
+    "glue('dt',dt)\n",
+    "glue('t_start',str(t_start.date()))\n",
+    "glue('t_end',str(t_end.date()))\n",
+    "glue('no_samples',np.round(len(df)/(10**6), decimals=1))\n",
+    "glue('direction1',trip_statistics_clean['trip_direction'].unique()[0])\n",
+    "glue('direction2',trip_statistics_clean['trip_direction'].unique()[1])\n",
+    "glue('no_trips',len(trip_statistics_clean))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83cb75fe-02ce-4477-886e-8e222a24c354",
+   "metadata": {},
+   "source": [
+    "### Trips"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e652f288-de8f-4a43-b1b4-5e1fab50c507",
+   "metadata": {
+    "tags": [
+     "remove_cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "interesting = ['latitude',\n",
+    "               'longitude',\n",
+    "               'sog',\n",
+    "               'cog',\n",
+    "               'consumption',\n",
+    "               'trip_time',\n",
+    "               'distance',\n",
+    "              ]\n",
+    "\n",
+    "for i,(direction, trips_) in enumerate(trip_statistics_clean.groupby(by='trip_direction', sort=False)):    \n",
+    "    df_ = trips_[interesting].describe()\n",
+    "    \n",
+    "    formatter = {\n",
+    "        'latitude' : '{:.3f}',\n",
+    "        'longitude' : '{:.3f}',\n",
+    "        'sog':'{:.2f}',\n",
+    "        'consumption':'{:.2f}',\n",
+    "    }\n",
+    "    for key in df_.columns:\n",
+    "        if not key in formatter:\n",
+    "            formatter[key] = '{:.1f}'\n",
+    "    table = df_.drop(index='count').style.format(formatter)\n",
+    "    glue(f'trips_describe_{i}',table)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51a9c564-f867-4e61-9b59-60e2e9c21c07",
+   "metadata": {
+    "tags": [
+     "remove_cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "decimals = {\n",
+    "'distance':0,\n",
+    "}\n",
+    "\n",
+    "def format(value, decimal):\n",
+    "    value = value.round(decimal)\n",
+    "    if decimal==0:\n",
+    "        value=int(value)\n",
+    "    return value\n",
+    "\n",
+    "for key in interesting:\n",
+    "    \n",
+    "    decimal=decimals.get(key,1)\n",
+    "        \n",
+    "    glue(f'{key}_min',format(trip_statistics_clean[key].min(), decimal=decimal), display=False)\n",
+    "    glue(f'{key}_max',format(trip_statistics_clean[key].max(), decimal=decimal), display=False)\n",
+    "    glue(f'{key}_std',format(trip_statistics_clean[key].std(), decimal=decimal), display=False)\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f204840-eb28-41dc-aa34-c7a111871c49",
+   "metadata": {},
+   "source": [
+    "Statistics for the {glue:}`no_trips` trips are summarized in {numref}`tab:trips_describe_0` for the {glue:text}`direction1` direction and in {numref}`tab:trips_describe_1` for the {glue:text}`direction2` direction.\n",
+    "\n",
+    "```{glue:figure} trips_describe_0\n",
+    ":figwidth: 300px\n",
+    ":name: \"tab:trips_describe_0\"\n",
+    "\n",
+    "Trips {glue:text}`direction1`\n",
+    "```\n",
+    "\n",
+    "```{glue:figure} trips_describe_1\n",
+    ":figwidth: 300px\n",
+    ":name: \"tab:trips_describe_1\"\n",
+    "\n",
+    "Trips {glue:text}`direction2`\n",
+    "```\n",
+    "\n",
+    "Latitude, longitude, speed over ground (sog) and course over ground (cog) are expressed as the mean values for each trip. Consumption, trip_time and distance are expressed as the total fuel consumption (in liters), total trip duration (in seconds) and total distance (in meters).\n",
+    "\n",
+    "The statistics display a very consistent way to operate this ship; the speed over ground (sog) varies between {glue:}`sog_min` and {glue:}`sog_max` m/s with a standard deviation of {glue:}`sog_std` m/s; the distance varies between {glue:}`distance_min` and {glue:}`distance_max` meters with a standard deviation of {glue:}`distance_std` meters.\n",
+    "\n",
+    "The total fuel consumption varies between {glue:}`consumption_min` and {glue:}`consumption_max` liters per trip with a standard deviation of {glue:}`consumption_std` liters.\n",
+    "\n",
+    "The mean consumption is a bit higher for trips in the {glue:text}`direction2` direction, which can also be seen in {numref}`fig:fuel_hist`.\n",
+    "\n",
+    "```{glue:figure} fig:fuel_hist\n",
+    ":name: \"fig:fuel_hist\"\n",
+    "\n",
+    "Histogram over the fuel consumption per trip in the two directions.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c84019a-3f84-4e0a-8104-77eaf60a0693",
+   "metadata": {
+    "tags": [
+     "remove_input",
+     "remove_cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "fig,ax=plt.subplots()\n",
+    "trip_statistics_clean['trip direction'] = trip_statistics_clean['trip_direction']\n",
+    "sns.histplot(trip_statistics_clean, x='consumption', hue='trip direction', ax=ax);\n",
+    "\n",
+    "fig_name = 'fig:fuel_hist'\n",
+    "glue(fig_name, fig, display=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4a51ba9-8476-4225-9fe4-8a8fc8f53611",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Crew training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca02f7b9-48f7-44df-b92d-9de1b16ff2fd",
+   "metadata": {
+    "tags": [
+     "remove_cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "tänd = t_start\n",
+    "utbildning = '2022-07-13'\n",
+    "lowseason = '2022-08-20'\n",
+    "glue('utbildning',utbildning, display=False)\n",
+    "trip_statistics_clean.loc[str(tänd.date()):utbildning,'period'] = r'Before training'\n",
+    "trip_statistics_clean.loc[utbildning:lowseason,'period'] = r'After training high season'\n",
+    "trip_statistics_clean.loc[lowseason:,'period'] = r'After training low season'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79ec5294-8f67-48b1-a120-11c353b91c38",
+   "metadata": {},
+   "source": [
+    "Crew training in eco driving to reduce the fuel consumption of the operation of {glue:text}`shipname` was carried out {glue:text}`utbildning`. Fuel consumption for trips before and after this training can be seen in {numref}`fig:pre_after`. The average fuel consumption per trip is very similar before and after training as seen in {numref}`fig:pre_after` and {numref}`tab:savings`. There is a small tendency that the fuel consumption is larger during the low season.\n",
+    "\n",
+    "```{glue:figure} fig:pre_after\n",
+    ":name: \"fig:pre_after\"\n",
+    "\n",
+    "Fuel consumption for all trips before and after crew training.\n",
+    "```\n",
+    "\n",
+    "```{glue:figure} tab:savings\n",
+    ":name: \"tab:savings\"\n",
+    "\n",
+    "Mean values for trips before and after training.\n",
+    "```\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97134a1d-a6ea-4871-8d1c-de1899d5ed6c",
+   "metadata": {
+    "tags": [
+     "remove_cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "fig,ax=plt.subplots()\n",
+    "\n",
+    "styles = ['k.','g.','b.']\n",
+    "for style, (period, df_period) in zip(styles,trip_statistics_clean.groupby(by='period', sort=False)):\n",
+    "    plot = df_period.plot(y='consumption', label=period, ax=ax, style=style, alpha=0.5)\n",
+    "    xs = [df_period.index[0],df_period.index[-1]]\n",
+    "    ys = np.array([1,1])*df_period['consumption'].mean()\n",
+    "    ax.plot(xs, ys, '-', label=f\"Average {period.lower()}\", color=plot.lines[-1].get_color(), zorder=10)\n",
+    "    \n",
+    "    \n",
+    "    ax.set_ylabel('Fuel consumption per trip [liters]')\n",
+    "\n",
+    "#get handles and labels\n",
+    "handles, labels = plt.gca().get_legend_handles_labels()\n",
+    "\n",
+    "#specify order of items in legend\n",
+    "order = list(np.arange(0,len(handles),2)) + list(np.arange(1,len(handles),2))\n",
+    "    \n",
+    "ax.legend([handles[idx] for idx in order],[labels[idx] for idx in order], ncol=2, loc='upper center');\n",
+    "glue('fig:pre_after',fig, display=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05879cef-06a5-444e-bc6c-c15288f2836d",
+   "metadata": {
+    "tags": [
+     "remove_cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "df_compare = trip_statistics_clean.groupby(by='period', sort=False)[interesting].mean()\n",
+    "glue('tab:savings',df_compare.style.format(formatter))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96ad5436-0bdc-49c4-956f-8d1faf72cbd2",
+   "metadata": {},
+   "source": [
+    "The average trip can be studied by calculating the mean speed and consumption for each time stamp along the trips. The average speed over ground (sog) for the trip time stamps is displayed for each period in {numref}`fig:mean_speed`. The speed is lower in the beginning and higher in the end of the trips {glue:text}`direction1` at the low season which is producing a higher fuel consumption as displayed in {numref}`fig:mean_consumption`.\n",
+    "\n",
+    "```{glue:figure} fig:mean_speed\n",
+    ":name: \"fig:mean_speed\"\n",
+    "\n",
+    "Speed over ground during average trips.\n",
+    "\n",
+    "```\n",
+    "\n",
+    "```{glue:figure} fig:mean_consumption\n",
+    ":name: \"fig:mean_consumption\"\n",
+    "\n",
+    "Fuel consumption during average trips.\n",
+    "\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "675a8a23-dd64-49e7-aa8e-7d0f557943e9",
+   "metadata": {
+    "tags": [
+     "remove_cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "fig,axes=plt.subplots(nrows=2)\n",
+    "\n",
+    "for ax, (trip_direction, df_) in zip(axes,trip_statistics_clean.groupby(by=['trip_direction'], sort=False)):\n",
+    "    \n",
+    "    for period, df__ in df_.groupby(by=['period'], sort=False):\n",
+    "        \n",
+    "        mask = df['trip_no'].isin(df__['trip_no'].unique())\n",
+    "        df.loc[mask].groupby('trip_time')['sog'].mean().plot(label=period, ax=ax)\n",
+    "        ax.set_xlim(0,1450)\n",
+    "        ax.set_xlabel('')\n",
+    "        ax.set_ylabel('sog [m/s]')\n",
+    "        ax.set_title(trip_direction)\n",
+    "        ax.legend()\n",
+    "        \n",
+    "ax.set_xlabel('trip time [s]');\n",
+    "ax.get_legend().set_visible(False)\n",
+    "glue('fig:mean_speed',fig, display=False) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69f0d0ce-efee-4c57-b9c6-e91c294aaf6d",
+   "metadata": {
+    "tags": [
+     "remove_cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "fig,axes=plt.subplots(nrows=2)\n",
+    "\n",
+    "for ax, (trip_direction, df_) in zip(axes,trip_statistics_clean.groupby(by=['trip_direction'], sort=False)):\n",
+    "    \n",
+    "    for period, df__ in df_.groupby(by=['period'], sort=False):\n",
+    "        \n",
+    "        mask = df['trip_no'].isin(df__['trip_no'].unique())\n",
+    "        df.loc[mask].groupby('trip_time')['consumption'].mean().plot(label=period, ax=ax)\n",
+    "        ax.set_xlim(0,1450)\n",
+    "        ax.set_xlabel('')\n",
+    "        ax.set_ylabel('Fuel consumption')\n",
+    "        ax.set_title(trip_direction)\n",
+    "        ax.legend()\n",
+    "        \n",
+    "ax.set_xlabel('trip time [s]');\n",
+    "ax.get_legend().set_visible(False)\n",
+    "glue('fig:mean_consumption',fig, display=False) "
+   ]
   }
  ],
  "metadata": {
