Vitaskär report done!

--- a/docs/vitaskär/02.01_method.ipynb
+++ b/docs/vitaskär/02.01_method.ipynb
@@ -28,6 +28,9 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "plt.style.use('paper')\n",
+    "from IPython.display import set_matplotlib_formats\n",
+    "set_matplotlib_formats('pdf')\n",
     "\n",
     "import seaborn as sns\n",
     "\n",
@@ -83,7 +86,7 @@
    "source": [
     "# Method\n",
     "(method)=\n",
-    "In order to investigate the energy efficiency of {glue:text}`shipname` the data is divided into trips from {glue:text}`harbour1` to {glue:text}`harbour2` or the reversed direction. The method to define the trips is further explained in [section](sec:trips)."
+    "In order to investigate the energy efficiency of {glue:text}`shipname` the data is divided into trips from {glue:text}`harbour1` to {glue:text}`harbour2` or the reversed direction. The method to define the trips is further explained in the [trip section](sec:trips)."
    ]
   },
   {
@@ -220,8 +223,6 @@
    "source": [
     "A minimum trip time $t_{min}$ is introduced to exclude these false starts giving the following algorithm:\n",
     "\n",
-    "```{prf:algorithm} Trips\n",
-    ":label: algorithm\n",
     "\n",
     "**Inputs** $sog$, $sog_{min}$, $t_{min}$\n",
     "\n",
@@ -231,7 +232,6 @@
     "2. Keep only valid trip starts: $t_{start,n+1} - t_{start,n} > t_{min}$\n",
     "3. Identify trip ends: $t_{end}$: $(sog_{i-1} >= sog_{min}) \\wedge (sog_{i} < sog_{min}) \\wedge ((t_i - t_{i-1}) > t_{min} $\n",
     "\n",
-    "```\n",
     "where $sog_{min}$={glue:}`min_start_speed` m/s and $t_{min}$={glue:}`min_time` s. The algorithm now disregards the initial reversing as seen in {numref}`fig:divide_trips`.  \n",
     "\n",
     "```{glue:figure} fig:divide_trips\n",
@@ -296,7 +296,7 @@
     "## Data cleaning\n",
     "Some of the trips are removed, for instance if there is missing data or the trip is too long, based on the following criteria:\n",
     "\n",
-    "* trips that contain time gaps that are larger than {glue:}`max_time_diff` s\n",
+    "* trips should have time gaps that are smaller than {glue:}`max_time_diff` s\n",
     "* trips should have a duration between {glue:}`min_time` and {glue:}`max_time` s\n",
     "* trips should be longer than {glue:}`min_distance` m\n",
     "\n",
