--- a/docs/vitaskär/02.10_data.ipynb
+++ b/docs/vitaskär/02.10_data.ipynb
@@ -73,7 +73,8 @@
     "import geopandas as gp\n",
     "from d2e2f.pipelines.data_preprocessing.prepare import prepare\n",
     "from operator import add\n",
-    "from functools import reduce"
+    "from functools import reduce\n",
+    "from d2e2f.reporting import pop_index"
    ]
   },
   {
@@ -156,18 +157,19 @@
    },
    "outputs": [],
    "source": [
-    "formatter = {\n",
-    "    'Latitude (deg)' : '{:.3f}',\n",
-    "    'Longitude (deg)' : '{:.3f}',\n",
+    "df__ = df_raw.describe().drop(index='count')\n",
+    "\n",
+    "decimals = {\n",
+    "    'Latitude (deg)' : 3,\n",
+    "    'Longitude (deg)' : 3,\n",
     "}\n",
     "for key in df_raw.columns:\n",
-    "    if not key in formatter:\n",
-    "        formatter[key] = '{:.1f}'\n",
-    "#table = df_raw.describe().drop(index='count').style.format(formatter)\n",
-    "table = df_raw.describe().drop(index='count')\n",
-    "\n",
-    "glue('data_describe',table)\n",
-    "#glue('data_describe',table.to_html())"
+    "    if not key in decimals:\n",
+    "        decimals[key] = 1\n",
+    "        \n",
+    "table = df__.round(decimals=decimals).transpose()\n",
+    "table.index.name='Signal'\n",
+    "glue('data_describe',pop_index(table))"
    ]
   },
   {
@@ -193,14 +195,6 @@
     "Data summary\n",
     "```"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cfa4ffe6-98c9-4f2d-9a8c-07a9d73d61e6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
