--- a/docs/vitaskär/03.01_results.ipynb
+++ b/docs/vitaskär/03.01_results.ipynb
@@ -40,6 +40,8 @@
     "\n",
     "import seaborn as sns\n",
     "plt.style.use('paper')\n",
+    "from IPython.display import set_matplotlib_formats\n",
+    "set_matplotlib_formats('pdf')\n",
     "\n",
     "#import seaborn as sns\n",
     "import os\n",
@@ -80,7 +82,8 @@
     "import sympy as sp\n",
     "from d2e2f.visualization.visualize import plot_map, plot_trips\n",
     "import statsmodels.api as sm\n",
-    "import geopandas as gp"
+    "import geopandas as gp\n",
+    "from d2e2f.reporting import pop_index"
    ]
   },
   {
@@ -178,17 +181,24 @@
     "for i,(direction, trips_) in enumerate(trip_statistics_clean.groupby(by='trip_direction', sort=False)):    \n",
     "    df_ = trips_[interesting].describe()\n",
     "    \n",
-    "    formatter = {\n",
-    "        'latitude' : '{:.3f}',\n",
-    "        'longitude' : '{:.3f}',\n",
-    "        'sog':'{:.2f}',\n",
-    "        'consumption':'{:.2f}',\n",
+    "    #df_['Statistic'] = df_.index\n",
+    "    #columns = list(df_.columns)\n",
+    "    #columns.remove('Statistic')\n",
+    "    #columns = ['Statistic'] + columns\n",
+    "    \n",
+    "    decimals = {\n",
+    "        'latitude' : 3,\n",
+    "        'longitude' : 3,\n",
+    "        'sog':2,\n",
+    "        'consumption':2,\n",
     "    }\n",
     "    for key in df_.columns:\n",
-    "        if not key in formatter:\n",
-    "            formatter[key] = '{:.1f}'\n",
-    "    table = df_.drop(index='count').style.format(formatter)\n",
-    "    glue(f'trips_describe_{i}',table)\n"
+    "        if not key in decimals:\n",
+    "            decimals[key] = 1\n",
+    "            \n",
+    "    table = df_.drop(index='count').round(decimals).transpose()\n",
+    "    table.index.name='Signal'\n",
+    "    glue(f'trips_describe_{i}',pop_index(table))\n"
    ]
   },
   {
@@ -311,23 +321,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79ec5294-8f67-48b1-a120-11c353b91c38",
+   "id": "e81335e8-88c2-42df-9534-32245d625df4",
    "metadata": {},
    "source": [
-    "Crew training in eco driving to reduce the fuel consumption of the operation of {glue:text}`shipname` was carried out {glue:text}`utbildning`. Fuel consumption for trips before and after this training can be seen in {numref}`fig:pre_after`. The average fuel consumption per trip is very similar before and after training as seen in {numref}`fig:pre_after` and {numref}`tab:savings`. There is a small tendency that the fuel consumption is larger during the low season.\n",
+    "Crew training in eco driving to reduce the fuel consumption of the operation of {glue:text}`shipname` was carried out {glue:text}`utbildning`. Fuel consumption for trips before and after this training can be seen in {numref}`fig:pre_after`. The average fuel consumption per trip is very similar before and after training as seen in {numref}`fig:pre_after`.\n",
     "\n",
     "```{glue:figure} fig:pre_after\n",
     ":name: \"fig:pre_after\"\n",
     "\n",
     "Fuel consumption for all trips before and after crew training.\n",
-    "```\n",
-    "\n",
-    "```{glue:figure} tab:savings\n",
-    ":name: \"tab:savings\"\n",
-    "\n",
-    "Mean values for trips before and after training.\n",
-    "```\n",
-    "\n"
+    "```"
    ]
   },
   {
@@ -375,7 +378,59 @@
    "outputs": [],
    "source": [
     "df_compare = trip_statistics_clean.groupby(by='period', sort=False)[interesting].mean()\n",
-    "glue('tab:savings',df_compare.style.format(formatter))"
+    "glue('tab:savings',pop_index(df_compare).style.format(formatter))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11d19118-af93-4a02-9c0a-08554c19f65b",
+   "metadata": {
+    "tags": [
+     "remove_cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "import matplotlib.ticker as mtick\n",
+    "df_ = df_compare[interesting]\n",
+    "fig,ax=plt.subplots()\n",
+    "df_ = df_.divide(df_.iloc[0])*100\n",
+    "df_.transpose().plot(kind='bar', ax=ax)\n",
+    "ax.legend(loc='upper center', bbox_to_anchor=(0.5, 1.15), ncol=3)\n",
+    "\n",
+    "ax.set_ylim(df_.min().min()-0.05*np.abs(df_.min().min()),df_.max().max()+0.03*np.abs(df_.max().max()))\n",
+    "ax.grid(True)\n",
+    "ax.yaxis.set_major_formatter(mtick.PercentFormatter())\n",
+    "glue('fig:savings',fig, display=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b538592c-7a64-4a01-8bbd-3b89c01798f9",
+   "metadata": {},
+   "source": [
+    "Mean values for the periods are shown in {numref}`tab:savings` and {numref}`fig:savings`.\n",
+    "\n",
+    "```{glue:figure} tab:savings\n",
+    ":name: \"tab:savings\"\n",
+    "\n",
+    "Mean values for trips for each period.\n",
+    "```\n",
+    "There is a small tendency that the fuel consumption is larger during the low season.\n",
+    "```{glue:figure} fig:savings\n",
+    ":name: \"fig:savings\"\n",
+    "\n",
+    "Mean values for trips for each period as percentage of values before training.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f0f14e0-c7ed-40a2-acc2-b5c633dab33f",
+   "metadata": {},
+   "source": [
+    "## Trip analysis"
    ]
   },
   {
@@ -459,6 +514,14 @@
     "ax.get_legend().set_visible(False)\n",
     "glue('fig:mean_consumption',fig, display=False) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fdeafed7-8a97-4ef2-8841-bc0cddbf5448",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
