--- a/docs/ventrafiken/07.04_uraniborg_savings.ipynb
+++ b/docs/ventrafiken/07.04_uraniborg_savings.ipynb
@@ -1113,7 +1113,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "d2e2f",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
