--- a/docs/ventrafiken/02.01_method.ipynb
+++ b/docs/ventrafiken/02.01_method.ipynb
@@ -318,28 +318,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_ = df.copy()\n",
-    "sog = df_[\"sog\"]\n",
-    "mask_downcross = (np.roll(sog, 1) >= min_start_speed) & (sog < min_start_speed) & (np.roll(sog, -1) < min_start_speed)\n",
-    "mask_upcross = (np.roll(sog, 1) < min_start_speed) & (sog < min_start_speed) & (np.roll(sog, -1) >= min_start_speed)\n",
-    "downcrossings = df_.loc[mask_downcross]\n",
-    "upcrossings = df_.loc[mask_upcross]\n",
+    "def get_upcrossings(df):\n",
+    "    sog = df[\"sog\"]\n",
+    "    mask_upcross = (np.roll(sog, 1) < min_start_speed) & (sog < min_start_speed) & (np.roll(sog, -1) >= min_start_speed)\n",
+    "    upcrossings = df_.loc[mask_upcross]\n",
+    "    return upcrossings\n",
+    "    \n",
+    "def get_downcrossings(df):\n",
+    "    sog = df[\"sog\"]\n",
+    "    mask_downcross = (np.roll(sog, 1) >= min_start_speed) & (sog < min_start_speed) & (np.roll(sog, -1) < min_start_speed)\n",
+    "    downcrossings = df_.loc[mask_downcross]\n",
+    "    return downcrossings\n",
     "\n",
-    "mask = upcrossings.index[0] < downcrossings.index\n",
-    "downcrossings_correct_order = downcrossings.loc[mask]\n",
+    "upcrossings = get_upcrossings(df)\n",
+    "downcrossings = get_downcrossings(df)\n",
+    "    \n",
+    "def correct_the_order(upcrossings, downcrossings):\n",
+    "    mask = upcrossings.index[0] < downcrossings.index\n",
+    "    downcrossings_correct_order = downcrossings.loc[mask]\n",
+    "    \n",
+    "    mask = downcrossings.index[-1] > upcrossings.index\n",
+    "    upcrossings_correct_order = upcrossings.loc[mask]\n",
+    "    \n",
+    "    assert len(downcrossings_correct_order) == len(upcrossings_correct_order)\n",
+    "    assert len(set(downcrossings_correct_order.index) & set(upcrossings_correct_order.index)) == 0\n",
+    "    \n",
+    "    \n",
+    "    return upcrossings_correct_order, downcrossings_correct_order\n",
     "\n",
-    "mask = downcrossings.index[-1] > upcrossings.index\n",
-    "upcrossings_correct_order = upcrossings.loc[mask]\n",
     "\n",
-    "assert len(downcrossings_correct_order) == len(upcrossings_correct_order)\n",
-    "assert len(set(downcrossings_correct_order.index) & set(upcrossings_correct_order.index)) == 0\n",
+    "upcrossings_correct_order, downcrossings_correct_order = correct_the_order(upcrossings=upcrossings, downcrossings=downcrossings)\n",
     "\n",
-    "trip_durations = downcrossings_correct_order.index - upcrossings_correct_order.index\n",
+    "def filter_with_trip_duration(upcrossings_correct_order, downcrossings_correct_order, min_time:int):\n",
+    "    trip_durations = downcrossings_correct_order.index - upcrossings_correct_order.index\n",
+    "    mask = trip_durations > f\"{min_time}S\"\n",
+    "    upcrossings_ok = upcrossings_correct_order.loc[mask]\n",
+    "    downcrossings_ok = downcrossings_correct_order.loc[mask]\n",
+    "    \n",
+    "    return upcrossings_ok, downcrossings_ok\n",
     "\n",
-    "mask = trip_durations > f\"{min_time}S\"\n",
-    "\n",
-    "upcrossings_ok = upcrossings_correct_order.loc[mask]\n",
-    "downcrossings_ok = downcrossings_correct_order.loc[mask]\n",
+    "upcrossings_ok, downcrossings_ok = filter_with_trip_duration(upcrossings_correct_order=upcrossings_correct_order, downcrossings_correct_order=downcrossings_correct_order, min_time=min_time)\n",
     "\n",
     "df.loc[upcrossings_ok.index,'state'] = 'start'\n",
     "df.loc[downcrossings_ok.index,'state'] = 'end'\n"
